<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EntryPointframeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.EntryPointFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btAccediAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:text="@string/accedi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBenvenuto"
        tools:text="@string/accedi" />

    <Button
        android:id="@+id/btRegistratiAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrati"
        app:layout_constraintEnd_toEndOf="@+id/btAccediAccount"
        app:layout_constraintStart_toStartOf="@+id/btAccediAccount"
        app:layout_constraintTop_toBottomOf="@+id/btAccediAccount" />

    <TextView
        android:id="@+id/tvBenvenuto"
        style="@style/MyTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/benvenuto_in_kyf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>